# GDV1_Group

./: README.md
ex1_p/Framework_OpenGL_OFF_LSA_Qt_Legacy/: CMakeLists.txt  TriangleMesh.cpp  TriangleMesh.h  Vec3.h  main.cpp  mainwindow.cpp  mainwindow.h
ex1_p/Framework_OpenGL_OFF_LSA_Qt_Legacy/Modelle/: 83ford-gt90.lsa  83ford-gt90.off  ballon.lsa  brach.lsa  delphin.lsa
ex2_p/Framework_OpenGL_VBO_Shader_Legacy/: CMakeLists.txt  TriangleMesh.cpp  TriangleMesh.h  main.cpp  mainwindow.cpp  mainwindow.h  shader.h
ex2_p/Framework_OpenGL_VBO_Shader_Legacy/Models/: Sketched-Teddy-org.off  sphere.off
ex2_p/Framework_OpenGL_VBO_Shader_Legacy/Shader/: FlatGreyShader.frag  FlatGreyShader.vert  ToonShader.frag  ToonShader.vert
ex3_p/Framework_OpenGL_Terrain_Texture_Culling_Qt/: CMakeLists.txt  ClipPlane.h  MainWindow.cpp  MainWindow.h  RenderState.h  TriangleMesh.cpp  TriangleMesh.h  Utilities.cpp  Utilities.h  Vec3.h  main.cpp  shader.cpp  shader.h
ex3_p/Framework_OpenGL_Terrain_Texture_Culling_Qt/Shader/: bump.frag  bump.vert  constant_color.frag  lambert.frag  only_mvp.vert
ex3_p/Framework_OpenGL_Terrain_Texture_Culling_Qt/Textures/skybox2/: neg_x.ppm  neg_y.ppm  neg_z.ppm  pos_x.ppm  pos_y.ppm  pos_z.ppm
ex3_p/Framework_OpenGL_Terrain_Texture_Culling_Qt/Textures/skybox3/: neg_x.ppm  neg_y.ppm  neg_z.ppm  pos_x.ppm  pos_y.ppm  pos_z.ppm
